--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,13 @@ language: python
 python:
   - "2.7"
   - "3.4"
-script: py.test
+before_install:
+    - pip install pytest pytest-cov
+    - pip install coveralls
+script:
+    - py.test
+
+after_success:
+    - if [[ $ENV == python=3.4* ]]; then
+          coveralls;
+      fi
