--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
 script:
-    - py.test
+    - py.test --cov chunky
 
 after_success:
     - if [[ $ENV == python=3.4* ]]; then
